@startuml criticalSection

class Pair {
    - x : int
    - y : int
    + Pair(x : int, y : int)
    + Pair()
    + getX() : int
    + getY() : int
    + incrementX() : void
    + incrementY() : void
    + toString() : String
    + checkState() : void
}

class PairValuesNotEqualException

PairValuesNotEqualException -up-|> RuntimeException  

Pair .right. PairValuesNotEqualException

abstract class PairManager {
    # p : Pair
    ~ checkCounter : AtomicInteger
    + getPair() : Pair
    # store(p : Pair) : void
    # {abstract} increment() : void    
}

PairManager -up-> Pair

class FullySynchronizedPairManager {
    # increment() : void -- synchronized
}

FullySynchronizedPairManager -up-|> PairManager

class SynchSectionPairManager {    
    # increment() : void
}

SynchSectionPairManager -up-|> PairManager


class PairManipulator

PairManipulator -right-> PairManager

class PairChecker {

}

PairChecker -left-> PairManager

@enduml